fix spacings

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -8,6 +8,16 @@ body {
 
 .sidebar {
     padding-top: 1.5rem;
+    font-weight: 300;
+    font-size: 0.9rem;
+    
+    a {
+        color: $dark;
+    }
+
+    svg {
+        margin-right: 1rem;
+    }
 }
 
 .logo {
@@ -26,7 +36,7 @@ body {
 }
 
 .header {
-    padding: 1rem 1rem 6rem;
+    padding: 1rem 2rem 6rem;
 
     a {
         color: inherit;
@@ -39,14 +49,15 @@ body {
 }
 
 .content {
-    margin-top: -5rem;
+    margin-top: -4rem;
+    padding: 0 2rem;
 }
 
 .dashboard-widget {
     background: #fff;
     border: #efefef solid 1px;
     border-radius: 0.5em;
-    box-shadow: 0 0 2rem 0 rgba(136,152,170,.15) !important;
+    box-shadow: 0 0 2rem 0 rgba(136,152,170,.35) !important;
     color: $body-color;
     padding: 1rem;
     position: relative;
@@ -67,6 +78,9 @@ body {
     }
     .content {
         font-size: 1.25rem;
+        margin: 0;
+        padding: 0;
+        color: $dark;
     }
     .icon {
         position: absolute;
